# shapeforge

./: .gitignore  README.md  pyproject.toml
demo/: cell_gen_demo.ipynb  config.yaml
docs/: custom_inclusion.md  flow_of_events.md
shapeforge/: __init__.py  _base.py  _nmspg.py  base.py  cell.py  cell_domain.py  config.yaml  inclusion.py  main.py  optim.py  shapeforge.py  utils.py
shapeforge/optim/: __init__.py  _nmspg.py  optim.py
tests/: test_nmspg.py
